# beetroot_engine_reinventing_the_wheel

./: .gitmodules  CMakeLists.txt  LICENSE
beet/client/: CMakeLists.txt  main.cpp
beet/core/: CMakeLists.txt
beet/core/inc/core/: assert.h  defines.h  engine.h  input.h  input_types.h  time.h  window.h
beet/core/src/: engine.cpp  input.cpp  time.cpp  window.cpp
beet/gfx/: CMakeLists.txt
beet/gfx/inc/gfx/: gfx_command.h  gfx_fallback.h  gfx_font.h  gfx_headers.h  gfx_interface.h  gfx_lit.h  gfx_mesh.h  gfx_resource_db.h  gfx_samplers.h  gfx_texture.h  gfx_types.h  gfx_utils.h  vulkan_platform_defines.h
beet/gfx/src/: gfx_command.cpp  gfx_fallback.cpp  gfx_font.cpp  gfx_lit.cpp  gfx_mesh.cpp  gfx_resource_db.cpp  gfx_samplers.cpp  gfx_texture.cpp  gfx_utils.cpp  vulkan_device.cpp
beet/math/: CMakeLists.txt
beet/math/inc/math/: mat4.h  quat.h  utilities.h  vec2.h  vec3.h  vec4.h
beet/math/src/: mat4.cpp  utilities.cpp  vec3.cpp  vec3f.cpp
beet/net/: CMakeLists.txt
beet/net/inc/net/: sockets.h
beet/net/inc/net/examples/: sockets_examples.h
beet/net/src/: sockets_windows.cpp
beet/net/src/examples/: sockets_examples.cpp
beet/runtime_client/: CMakeLists.txt  main.cpp
beet/runtime_client/inc/client/: client_entity_builder.h  script_editor_camera.h
beet/runtime_client/src/: client_entity_builder.cpp  script_editor_camera.cpp
beet/runtime_server/: CMakeLists.txt  main.cpp
beet/server/: CMakeLists.txt  main.cpp
beet/shared/: CMakeLists.txt
beet/shared/inc/shared/: assert.h  bit_utils.h  db_types.h  dds_loader.h  log.h  texture_formats.h  tinyddsloader.h
beet/shared/src/: bit_utils.cpp  dds_loader.h.cpp  log.cpp
beet_pipeline/: CMakeLists.txt  main.cpp
beet_pipeline/inc/pipeline/: font_atlas.h  font_shared.h  pipeline_cache.h  pipeline_commandlines.h  pipeline_defines.h  shader_compile.h  texture_compression.h
beet_pipeline/src/: font_atlas.cpp  pipeline_cache.cpp  pipeline_commandlines.cpp  shader_compile.cpp  texture_compression.cpp
core/inc/beet/: input.h  time.h  types.h  window.h
core/inc/beet/maths/: vec2.h
core/src/: input.cpp  main.cpp  time.cpp  window.cpp
preprocess_pipeline/: CMakeLists.txt  main.cpp
res/fonts/: font_distribution_info.txt  info.txt
res/fonts/Unifont/: Licence_OFL_1-1.txt
res/shaders/: CompileShaders.bat
res/shaders/fallback/: fallback.frag
res/shaders/font/: font.frag  font.vert
res/shaders/lit/: lit.frag  lit.vert
res/textures/: texture_distribution_info.txt
